# nhl-led-scoreboard

./: .gitignore  README.md  RELEASE_NOTES_V2026.5.0.md  VERSION  pyproject.toml  requirements-docker.txt  requirements-pi5.txt  requirements.txt
config/: config.json.sample  config.schema.json
scripts/sbtools/: sb-init
scripts/supervisor/: logo-editor.conf
src/: logo_editor.py
src/api/weather/: openMeteoWeather.py  wxForecast.py
src/boards/: boards.py  christmas.py  seriesticker.py
src/boards/builtins/: _external_fetch.py  _text.py
src/boards/builtins/awards/: __init__.py  board.py  config.defaults.json  plugin.json
src/boards/builtins/draft_tracker/: __init__.py  board.py  config.defaults.json  plugin.json
src/boards/builtins/event_countdown/: __init__.py  board.py  config.defaults.json  plugin.json
src/boards/builtins/free_agency/: __init__.py  board.py  config.defaults.json  plugin.json
src/boards/builtins/holiday/: __init__.py  board.py  config.defaults.json  plugin.json
src/boards/builtins/season_countdown/: plugin.json
src/boards/builtins/stats_leaders/: plugin.json
src/boards/builtins/team_news/: __init__.py  board.py  config.defaults.json  plugin.json
src/data/: data.py  playoffs.py  scheduler.py  scoreboard.py  scoreboard_config.py  season_phase.py  status.py
src/nhl_api/: models.py
src/renderer/: main.py
src/templates/: dashboard.html
