[project]
name = "nhl-led-scoreboard"
version = "2026.03.0"
description = "🚨 Display NHL score of your favorite team on a Raspberry Pi driven RGB LED matrix. 🚨"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "backoff>=2.2.1",
    "cairosvg>=2.6.0",
    "diskcache>=5.6.3",
    "env-canada>=0.12.2",
    "ephem>=4.1.6",
    "fastjsonschema>=2.14.4",
    "geopy>=2.4.1",
    "httpx>=0.27.0",
    "ipinfo>=5.1.1",
    "iso6709>=0.1.5",
    "lastversion>=1.1.6",
    "nameparser>=1.0.6",
    "noaa-sdk>=0.1.18",
    "packaging>=25.0",
    "paho-mqtt>=2.1.0",
    "pillow==12.2.0",
    "regex>=2020.4.4",
    "rich>=13.9.4",
    "richcolorlog==1.44.12",
    "tzlocal>=5.2",
    "watchdog>=6.0.0",
    "flask>=3.0.0",
    "rgbmatrixemulator>=0.13.5 ; platform_system != 'Linux'",

    # Pi/Linux-only packages:
    "gpiozero==1.6.2 ; platform_system == 'Linux'",
    "dbus-python>=1.3.2 ; platform_system == 'Linux'",
    "python-tsl2591==0.2.0 ; platform_system == 'Linux'",
    "tk>=0.1.0 ; platform_system == 'Linux'",
    "rgbmatrix ; platform_system == 'Linux'",
]

[tool.uv.sources]
rgbmatrix = { path = "submodules/matrix/bindings/python" }

[tool.ruff]
line-length = 120
select = ["E", "F", "W", "I"]
#ignore = ["E501"]
